refactor(project): 重构技能管理和优化MCP服务器
- 删除旧版本预订页面代码生成技能(v0.0.1-v0.0.3)
- 新增代码片段提取技能替换传感器数据跟踪技能
- 优化Apifox API文档MCP服务器配置和文档
- 更新环境变量示例和使用说明
- 清理过时的HTML清理器模块
- 更新Git忽略规则和Claude设置

--- a/mcp/apifox-api-docs-mcp/.env.example
+++ b/mcp/apifox-api-docs-mcp/.env.example
@@ -3,9 +3,9 @@
 # 你的 Apifox API Key (36位UUID格式)
 APIFOX_API_KEY=99e805b6-d781-40bf-aad5-f8e1151ea228
 
-# Apifox 基础 URL (可选，默认为 https://apifox.dragonpass.com.cn)
+# Apifox 基础 URL (可选，默认为 https://apifox.evanfang.com.cn)
 # 如果使用其他 Apifox 实例，可以修改此配置
-APIFOX_BASE_URL=https://apifox.dragonpass.com.cn
+APIFOX_BASE_URL=https://apifox.evanfang.com.cn
 
 # 获取 Apifox Key 的方法：
 # 1. 访问你的 Apifox 项目
@@ -14,7 +14,7 @@ APIFOX_BASE_URL=https://apifox.dragonpass.com.cn
 # 4. 或者直接复制完整的分享链接，工具会自动提取 key
 
 # 示例链接格式：
-# https://apifox.dragonpass.com.cn/apidoc/shared/99e805b6-d781-40bf-aad5-f8e1151ea228/api-3525338
+# https://apifox.evanfang.com.cn/apidoc/shared/99e805b6-d781-40bf-aad5-f8e1151ea228/api-3525338
 # 其中 99e805b6-d781-40bf-aad5-f8e1151ea228 就是要使用的 APIFOX_API_KEY
 
 # 如果使用自定义 Apifox 实例：
