--- a/mcp/apifox-api-docs-mcp/.env.example
+++ b/mcp/apifox-api-docs-mcp/.env.example
@@ -1,11 +1,21 @@
-# Apifox API 文档 MCP 服务器环境变量配置
+# Apifox API Documentation MCP Server Environment Configuration
 
-# 你的 Apifox API Key (36位UUID格式)
-APIFOX_API_KEY=99e805b6-d781-40bf-aad5-f8e1151ea228
-
-# Apifox 基础 URL (可选，默认为 https://apifox.evanfang.com.cn)
-# 如果使用其他 Apifox 实例，可以修改此配置
+# Apifox Server Configuration
 APIFOX_BASE_URL=https://apifox.evanfang.com.cn
+APIFOX_API_KEY=your-default-api-key-here
+
+# Request Configuration (optional)
+APIFOX_TIMEOUT=10000          # Request timeout in milliseconds (default: 10000)
+APIFOX_RETRIES=2              # Number of retry attempts (default: 2)
+
+# Development Configuration
+NODE_ENV=development          # Set to 'production' for production deployment
+
+# MCP Server Configuration
+MCP_SERVER_NAME=apifox-api-docs-mcp
+MCP_SERVER_VERSION=1.1.0
+
+# ======== 使用说明 ========
 
 # 获取 Apifox Key 的方法：
 # 1. 访问你的 Apifox 项目
