--- a/mcp/apifox-api-docs-mcp/package.json
+++ b/mcp/apifox-api-docs-mcp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apifox-api-docs-mcp",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "MCP server for fetching Apifox API documentation",
   "main": "dist/index.js",
   "type": "module",
@@ -11,8 +11,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-esm src/index.ts",
-    "inspector": "mcp-inspector",
-    "debug:apifox": "pnpm build && mcp-inspector dist/index.js"
+    "inspector": "DANGEROUSLY_OMIT_AUTH=true mcp-inspector",
+    "debug:apifox": "pnpm build && DANGEROUSLY_OMIT_AUTH=true mcp-inspector dist/index.js"
   },
   "keywords": [
     "mcp",
