feat(clis): 新增 skill-manager CLI 工具和专业技能集合
1. 新增 skill-manager CLI 工具,提供技能的添加、检查、移除、扫描、搜索和更新功能
2. 实现完整的 TypeScript 架构,包含命令模块、核心库和工具函数
3. 集成 GitLab API、并发处理、进度显示和更新检查等高级功能
4. 新增 cli-creator 技能的两个版本 (v0.0.1 和完整版),用于创建生产级 Node.js CLI 工具
5. 新增 cli-developer 技能,提供 CLI 开发的设计模式和最佳实践
6. 新增 react-expert 技能,覆盖 React 19、Hooks、性能优化等前端知识
7. 为所有技能添加详细的参考文档和代码模板
8. 更新项目依赖和权限配置

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "tsc",
     "start": "ts-node"
   },
-  "keywords": ["cc-system", "creator", "claude", "typescript"],
+  "keywords": [
+    "cc-system",
+    "creator",
+    "claude",
+    "typescript"
+  ],
   "author": "Evan Fang",
   "license": "MIT",
   "repository": {
@@ -19,15 +24,16 @@
   },
   "homepage": "https://github.com/evanfang0054/cc-system-creator-scripts#readme",
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/js-yaml": "^4.0.5",
     "@types/archiver": "^6.0.2",
+    "@types/js-yaml": "^4.0.5",
+    "@types/node": "^20.0.0",
     "ts-node": "^10.9.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0",
-    "archiver": "^6.0.1"
+    "archiver": "^6.0.1",
+    "js-yaml": "^4.1.0"
   },
   "optionalDependencies": {
     "yazl": "^2.5.1"
