feat(cli): 完善 skill-manager CLI 包的发布配置
1. 将包名从 skill-manager 更新为 @efdev/skill-manager 以支持 npm 发布
2. 添加 repository 字段指向 monorepo 仓库地址
3. 配置 homepage 和 issue 跟踪链接
4. 添加 author 字段标识包维护者
5. 新增 README.md 文档文件

--- a/clis/skill-manager/package.json
+++ b/clis/skill-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skill-manager",
+  "name": "@efdev/skill-manager",
   "version": "0.1.0",
   "description": "多平台 AI Agent Skills 管理工具",
   "type": "module",
@@ -16,6 +16,16 @@
     "lint": "biome check .",
     "format": "biome format . --write"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/evanfang0054/cc-system-creator-scripts.git",
+    "directory": "clis/skill-manager"
+  },
+  "bugs": {
+    "url": "https://github.com/evanfang0054/cc-system-creator-scripts/issues"
+  },
+  "homepage": "https://github.com/evanfang0054/cc-system-creator-scripts#readme",
+  "author": "evanfang",
   "engines": {
     "node": ">=18.0.0"
   },
